packages/lustre-v6.6.103.3/test/should_fail/semantics/patrick.lus

node patrick (a,b:int; c,d: bool) 
returns (s:int);
var 
  x: int;
  y: int;
let
  assert (a>0);
  assert (b>0);
  s = if c then a else 1 + if d then b else 4;
tel
